flow/static/eventsAndInitiatives/events.css
@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@500&display=swap");

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --custom-Red: #e33324;
  --custom-brown-opacity: #280e0991;
  --custom-Red-opacity: #d6372973;
  --custom-pink-opacity: #e979578f;
  --custom-brown: #280e09;
  --custom-pink: #e97957;
  --custom-Primary: #fa851b;
  --custom-Secondary: #e33324;
}
.navMenu {
  font-family: "Unbounded", cursive;
}

body {
  color: #fff;
  margin: 0 auto;
  position: relative;
  z-index: 0;
  font-family: "Unbounded", cursive;
  
  background-position: center;
  background-repeat: no-repeat;

  background-attachment: fixed;

  margin: 0;
  box-sizing: inherit;
}

#myVideo {
  position: fixed;
  z-index: 2;
  width: 100vw;
  /* height: 100vh; */
  object-fit: contain;
  top: 0;
  left: 0;
}
.bg_blur {
  /* backdrop-filter: blur(2px); */
  background-color: rgba(32, 0, 15, 0.356);
  z-index: -8;
  position: fixed;
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
}
.bg_grain {
  position: fixed;
  left: 0%;
  top: 0%;
  right: 0%;
  bottom: 0%;
  z-index: -8;
  /* display: none; */
  width: 100vw;
  height: 100vh;
  background-image: url(/static/grain.png);
  background-position: 0px 0px;
  background-size: 200px;
}
.days {
  display: flex;
  width: 100%;
  justify-content: center;
  margin: 30px auto;
  margin-top: 100px;
}

.days h3 {
  margin: 10px;
  font-size: 0.8rem !important;
}
.day {
  margin-top: 15px;
  width: 100px;
  height: 30px;
  z-index: 10;
  font-size: 12px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  color: #fff;
}

.offcanvas {
  z-index: 100009;
}
.arnav {
  z-index: 100010;
}

.active2 {
  background: #fa851b;
  outline: 1px solid #fa851b;
  outline-offset: 3px;
  z-index: 40000;
  margin-top: 15px;
  width: 100px;
  height: 30px;
  font-size: 12px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  color: #fff;
}
@media screen and (max-width: 1100px) {
  .active2 {
    z-index: -20000;
  }
}
.eventwrap {
  display: none;
  flex-direction: column;
  justify-content: space-between;
  transform: scaleY(0);
  transition: 0.5s;
}
.cardWrapper {
  width: 100% !important;
  padding: 1em 1em 1em 1em;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.cards {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 2em;
  min-height: 80vh;
  /* margin-bottom: 100px; */
  /* height: calc(100vh - 183px); */
  overflow-y: hidden;
}

@media screen and (max-width: 1120px) {
  .cards {
    z-index: -10000;
  }
}
.carddisplay {
  position: absolute;
  z-index: 0;
}
.eventhead {
  /* border: 2px solid #FA851B; */
  /* text-align: center; */
  padding: 0.5em 0;
  display: inline-block;
  /* color: #FA851B; */
}
.eventhead h1 {
  /* border: 2px solid #FA851B; */
  /* text-align: center; */
  text-transform: capitalize;
  margin-left: 0.5em;
  font-size: 1.4em;
  /* color: #FA851B; */
}
.desc {
  word-wrap: break-word;
}
.card {
  background-color: var(--custom-Primary);
  /* background-color: #D63629; */
  width: 306px;
  /* box-sizing: border-box; */
  height: 380px;
  display: flex;
  flex-direction: column;
  justify-content: end;
  position: relative;
  margin: 18px 6.5px;
  z-index: 10000;
  animation-duration: 500ms;
  animation-fill-mode: backwards;
  border: 2px solid #fa851b;
  /* outline-offset: 5px; */
  /* background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%); */
  /* backdrop-filter: blur(2px); */
}
/* .card::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
  padding: 2px;
  background: linear-gradient(-135deg, var(--custom-pink), var(--custom-Red));
  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
  -webkit-mask-composite: destination-out;
  mask-composite: exclude;
}  */
.card img {
  width: 306px;
  height: 380px;
  object-fit: cover;
  border: 2px solid #fa851b;

  /* border-radius: 15px; */
}
.line {
  width: 20px;
  height: 15px;
  background-color: #fa851b;
}

.card:hover .cardWrapper {
  background-color: #fa871b43;
  transition: 0.5s ease-in-out;
}
.card:hover .eventwrap {
  display: flex;
  transform: scaleY(1);
  transition: 100ms 200ms;
}
.eventwrap::after {
  transform: scaleY(1);
  transform-origin: bottom;
}
.card:hover .eventhead {
  /* border: 2px solid #FA851B; */
  /* text-align: center; */
  transition: 0.5s;
  /* background-color: #FA851B; */
  /* color: #FA851B; */
}
.event {
  display: flex;
  justify-content: space-between;
  align-items: center;

  margin: 8px 0px 4px 0px;
}
.event h1 {
  font-size: 20px;
  text-transform: capitalize;
  margin: 0px;
}
.card h2 {
  margin: 0px;
  font-size: 14px;
}
.buttons {
  display: flex;
  justify-content: space-between;
}

.button {
  width: 100px;
  margin-top: 15px;
  height: 30px;
  font-size: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  outline: 1px solid #fa851b;
  outline-offset: 2px;
  background-color: #fa851b;
  color: #0c0904;
}

.modal {
  display: none;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  overflow-x: hidden;
  top: 0;
  left: 0;
  backdrop-filter: blur(2px);
  background-color: rgba(32, 0, 15, 0.356);
}
.modaldisplay {
  display: flex !important;
  width: 100vw;
  height: 100vh;
  z-index: 1000000;
  position: fixed;
}
.modalCard {
  background-image: url("/static/gridbg.png");
  background-size: cover;
  /* background-color: var(--custom-brown-opacity); */
  border: 10px solid #fa851b;
  /* width: 1000px;
  height: 590px; */
  box-sizing: border-box;
  padding: 2em;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  /* margin: 18px 6.5px; */
  z-index: 100000;
  backdrop-filter: blur(2px);
}
.modalCard::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
  padding: 2px;

  mask-composite: exclude;
}

.cross {
  width: 24px !important;
  height: 24px !important;
  cursor: pointer;
}
.close {
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  width: 100%;
  margin-right: 50px;
  margin-top: -20px;
}

.modalCardWrapper img {
  position: relative;
  left: -180px;
  height: 380px;
  aspect-ratio: 306/380;
  border: 6px solid #fa851b;
  /* margin-right: 41px; */
  object-fit: cover;
}

.modalCardWrapper {
  display: flex;
  align-items: center;
  flex-shrink: 1;
  /* justify-content: center; */
}
.modalContent {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.modalCardWrapper p {
  font-size: 15px;
  line-height: 25px;
  text-transform: uppercase;
  width: 400px;
  overflow-y: auto;
}
.modalDesc p {
  word-break: break-word;
}
.modalCardWrapper h1 {
  color: white;
}
.time {
  display: flex;
  text-align: center;
}

.modalbutton {
  color: #0c0904;
  margin-top: 15px;
  width: 220px;
  height: 45px;
  font-size: 24px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  background: #fa851b;
  outline: 2px solid #fa851b;
  outline-offset: 4px;
  box-shadow: 0px 0px 10px 1px var(--custom-Red-opacity);
}

@media screen and (max-width: 1020px) {
  .modalCardWrapper {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 18px 6.5px;
    text-align: center;
  }
  .modalCardWrapper p {
    margin: 18px 6.5px;
    width: 500px;
    height: auto;
  }
  .modalCardWrapper h1 {
    margin-top: 20px;
  }
  .modalCard {
    height: auto;
    width: 550px;
  
  }
  .modalCard img {
    margin-right: 0px;
  }
  .time {
    justify-content: center;
  }
  .modalbutton {
    margin: 0 auto;
  }
  .close {
    margin-top: 5px;
    margin-right: -40px;
    margin-bottom: -10px;
  }

  .day {
    font-size: 12px;
  }
}

@media screen and (max-width: 600px) {
  .modalCardWrapper img {
    left: unset;
    width: 300px;
    height: 250px;
    border: 2px solid #fa851b;
  }
  .modalCard {

    border: 4px solid #fa851b;
    width: 340px;
  }
  .modalCardWrapper p {
    width: 300px;
    font-size: 10px;
    line-height: 18px;
    text-transform: none;
  }
  .modalCardWrapper h1 {
    font-size: 20px;
  }
  .modalbutton {
    width: 201px;
    height: 40px;
    font-size: 18px;
  }
  .modalDesc {
    overflow-y: scroll;
    margin-top: 5px;
  }
}
.container {
  padding-top: 6rem;
  padding: 0;
  margin: 0;
  /* margin-top: 100px; */
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  /* background-color: #61463d2d; */
  font-family: "Unbounded", cursive;
  background-size: cover;
}
@media screen and (max-width: 1100px) {
  .container {
    z-index: 11;
    position: relative;
  }
}

.dot {
  width: 4px;
  height: 4px;
  position: absolute;
  background-color: #ff00cc;
  box-shadow: 0px 0px 10px 2px #ff00cc;
  border-radius: 20px;
  z-index: 2;
}

html,
body,
#container {
  width: 100%;
  height: 100%;
}

